TOPVPCLab.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "This template deploys a VPC, with 3 Public and 3 Private subnets, 3 NatGateway's and an IGW" ,
  "Parameters": {
    "EnvironmentName": {
      "Description": "An environment name that is prefixed to resource names",
      "Type": "String"
    },
    "VpcCIDR": {
      "Description": "Please enter the IP range (CIDR notation) for this VPC",
      "Type": "String",
      "Default": "10.0.0.0/16"
    },
    "PublicSubnet1CIDR": {
      "Description": "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone",
      "Type": "String",
      "Default": "10.0.1.0/24"
    },
    "PublicSubnet2CIDR": {
      "Description": "Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone",
      "Type": "String",
      "Default": "10.0.2.0/24"
    },
    "PublicSubnet3CIDR": {
      "Description": "Please enter the IP range (CIDR notation) for the public subnet in the third Availability Zone",
      "Type": "String",
      "Default": "10.0.3.0/24"
    },
    "PrivateSubnet1CIDR": {
      "Description": "Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone",
      "Type": "String",
      "Default": "10.0.4.0/24"
    },
    "PrivateSubnet2CIDR": {
      "Description": "Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
      "Type": "String",
      "Default": "10.0.5.0/24"
    },
    "PrivateSubnet3CIDR": {
      "Description": "Please enter the IP range (CIDR notation) for the private subnet in the third Availability Zone",
      "Type": "String",
      "Default": "10.0.6.0/24"
    }
  },
  "Resources": {
    "VPC": {
      "Type" : "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {
          "Ref": "VpcCIDR"
        },
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Ref": "EnvironmentName"
          }
          }]
        }
      },
      "InternetGateway": {
        "Type": "AWS::EC2::InternetGateway",
        "Properties": {
          "Tags": [{
            "Key": "Name",
            "Value": {
              "Ref": "EnvironmentName"
            }
            }]
          }
        },
        "InternetGatewayAttachment": {
          "Type": "AWS::EC2::VPCGatewayAttachment",
          "Properties": {
            "InternetGatewayId": {
              "Ref": "InternetGateway"
            },
            "VpcId": {
              "Ref": "VPC"
            }
          }
        },
        "PublicSubnet1": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
            "VpcId": {
              "Ref": "VPC"
            },
            "AvailabilityZone": {
              "Fn::Select": [
                0,
                {
                  "Fn::GetAZs": ""
                }
              ]
            },
            "CidrBlock": {
              "Ref": "PublicSubnet1CIDR"
            },
            "MapPublicIpOnLaunch": true,
            "Tags": [{
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${EnvironmentName} Public Subnet (AZ1)"
              }
              }]
            }
          },
          "PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
              "VpcId": {
                "Ref": "VPC"
              },
              "AvailabilityZone": {
                "Fn::Select": [
                  1,
                  {
                    "Fn::GetAZs": ""
                  }
                ]
              },
              "CidrBlock": {
                "Ref": "PublicSubnet2CIDR"
              },
              "MapPublicIpOnLaunch": true,
              "Tags": [{
                "Key": "Name",
                "Value": {
                  "Fn::Sub": "${EnvironmentName} Public Subnet (AZ2)"
                }
                }]
              }
            },
            "PublicSubnet3": {
              "Type": "AWS::EC2::Subnet",
              "Properties": {
                "VpcId": {
                  "Ref": "VPC"
                },
                "AvailabilityZone": {
                  "Fn::Select": [
                    2,
                    {
                      "Fn::GetAZs": ""
                    }
                  ]
                },
                "CidrBlock": {
                  "Ref": "PublicSubnet3CIDR"
                },
                "MapPublicIpOnLaunch": true,
                "Tags": [{
                  "Key": "Name",
                  "Value": {
                    "Fn::Sub": "${EnvironmentName} Public Subnet (AZ3)"
                  }
                  }]
                }
              },
              "PrivateSubnet1": {
                "Type": "AWS::EC2::Subnet",
                "Properties": {
                  "VpcId": {
                    "Ref": "VPC"
                  },
                  "AvailabilityZone": {
                    "Fn::Select": [
                      0,
                      {
                        "Fn::GetAZs": ""
                      }
                    ]
                  },
                  "CidrBlock": {
                    "Ref": "PrivateSubnet1CIDR"
                  },
                  "MapPublicIpOnLaunch": false,
                  "Tags": [{
                    "Key": "Name",
                    "Value": {
                      "Fn::Sub": "${EnvironmentName} Private Subnet (AZ1)"
                    }
                    }]
                  }
                },
                "PrivateSubnet2": {
                  "Type": "AWS::EC2::Subnet",
                  "Properties": {
                    "VpcId": {
                      "Ref": "VPC"
                    },
                    "AvailabilityZone": {
                      "Fn::Select": [
                        1,
                        {
                          "Fn::GetAZs": ""
                        }
                      ]
                    },
                    "CidrBlock": {
                      "Ref": "PrivateSubnet2CIDR"
                    },
                    "MapPublicIpOnLaunch": false,
                    "Tags": [{
                      "Key": "Name",
                      "Value": {
                        "Fn::Sub": "${EnvironmentName} Private Subnet (AZ2)"
                      }
                      }]
                    }
                  },
                  "PrivateSubnet3": {
                    "Type": "AWS::EC2::Subnet",
                    "Properties": {
                      "VpcId": {
                        "Ref": "VPC"
                      },
                      "AvailabilityZone": {
                        "Fn::Select": [
                          2,
                          {
                            "Fn::GetAZs": ""
                          }
                        ]
                      },
                      "CidrBlock": {
                        "Ref": "PrivateSubnet3CIDR"
                      },
                      "MapPublicIpOnLaunch": false,
                      "Tags": [{
                        "Key": "Name",
                        "Value": {
                          "Fn::Sub": "${EnvironmentName} Private Subnet (AZ3)"
                        }
                        }]
                      }
                    },
                    "NatGateway1EIP": {
                      "Type": "AWS::EC2::EIP",
                      "DependsOn": "InternetGatewayAttachment",
                      "Properties": {
                        "Domain": "vpc"
                      }
                    },
                    "NatGateway2EIP": {
                      "Type": "AWS::EC2::EIP",
                      "DependsOn": "InternetGatewayAttachment",
                      "Properties": {
                        "Domain": "vpc"
                      }
                    },
                    "NatGateway3EIP": {
                      "Type": "AWS::EC2::EIP",
                      "DependsOn": "InternetGatewayAttachment",
                      "Properties": {
                        "Domain": "vpc"
                      }
                    },
                    "NatGateway1": {
                      "Type": "AWS::EC2::NatGateway",
                      "Properties": {
                        "AllocationId": {
                          "Fn::GetAtt": [
                            "NatGateway1EIP",
                            "AllocationId"
                          ]
                        },
                        "SubnetId": {
                          "Ref": "PublicSubnet1"
                        }
                      }
                    },
                    "NatGateway2": {
                      "Type": "AWS::EC2::NatGateway",
                      "Properties": {
                        "AllocationId": {
                          "Fn::GetAtt": [
                            "NatGateway2EIP",
                            "AllocationId"
                          ]
                        },
                        "SubnetId": {
                          "Ref": "PublicSubnet2"
                        }
                      }
                    },
                    "NatGateway3": {
                      "Type": "AWS::EC2::NatGateway",
                      "Properties": {
                        "AllocationId": {
                          "Fn::GetAtt": [
                            "NatGateway3EIP",
                            "AllocationId"
                          ]
                        },
                        "SubnetId": {
                          "Ref": "PublicSubnet3"
                        }
                      }
                    },
                    "PublicRouteTable": {
                      "Type": "AWS::EC2::RouteTable",
                      "Properties": {
                        "VpcId": {
                          "Ref": "VPC"
                        },
                        "Tags": [{
                          "Key": "Name",
                          "Value": {
                            "Fn::Sub": "${EnvironmentName} Public Routes"
                          }
                          }]
                        }
                      },
                      "DefaultPublicRoute": {
                        "Type": "AWS::EC2::Route",
                        "DependsOn": "InternetGatewayAttachment",
                        "Properties": {
                          "RouteTableId": {
                            "Ref": "PublicRouteTable"
                          },
                          "DestinationCidrBlock": "0.0.0.0/0",
                          "GatewayId": {
                            "Ref": "InternetGateway"
                          }
                        }
                      },
                      "PublicSubnet1RouteTableAssociation": {
                        "Type": "AWS::EC2::SubnetRouteTableAssociation",
                        "Properties": {
                          "RouteTableId": {
                            "Ref": "PublicRouteTable"
                          },
                          "SubnetId": {
                            "Ref": "PublicSubnet1"
                          }
                        }
                      },
                      "PublicSubnet2RouteTableAssociation": {
                        "Type": "AWS::EC2::SubnetRouteTableAssociation",
                        "Properties": {
                          "RouteTableId": {
                            "Ref": "PublicRouteTable"
                          },
                          "SubnetId": {
                            "Ref": "PublicSubnet2"
                          }
                        }
                      },
                      "PublicSubnet3RouteTableAssociation": {
                        "Type": "AWS::EC2::SubnetRouteTableAssociation",
                        "Properties": {
                          "RouteTableId": {
                            "Ref": "PublicRouteTable"
                          },
                          "SubnetId": {
                            "Ref": "PublicSubnet3"
                          }
                        }
                      },
                      "PrivateRouteTable1": {
                        "Type": "AWS::EC2::RouteTable",
                        "Properties": {
                          "VpcId": {
                            "Ref": "VPC"
                          },
                          "Tags": [{
                            "Key": "Name",
                            "Value": {
                              "Fn::Sub": "${EnvironmentName} Private Routes (AZ1)"
                            }
                            }]
                          }
                        },
                        "DefaultPrivateRoute1": {
                          "Type": "AWS::EC2::Route",
                          "Properties": {
                            "RouteTableId": {
                              "Ref": "PrivateRouteTable1"
                            },
                            "DestinationCidrBlock": "0.0.0.0/0",
                            "NatGatewayId": {
                              "Ref": "NatGateway1"
                            }
                          }
                        },
                        "PrivateSubnet1RouteTableAssociation": {
                          "Type": "AWS::EC2::SubnetRouteTableAssociation",
                          "Properties": {
                            "RouteTableId": {
                              "Ref": "PrivateRouteTable1"
                            },
                            "SubnetId": {
                              "Ref": "PrivateSubnet1"
                            }
                          }
                        },
                        "PrivateRouteTable2": {
                          "Type": "AWS::EC2::RouteTable",
                          "Properties": {
                            "VpcId": {
                              "Ref": "VPC"
                            },
                            "Tags": [{
                              "Key": "Name",
                              "Value": {
                                "Fn::Sub": "${EnvironmentName} Private Routes (AZ2)"
                              }
                              }]
                            }
                          },
                          "DefaultPrivateRoute2": {
                            "Type": "AWS::EC2::Route",
                            "Properties": {
                              "RouteTableId": {
                                "Ref": "PrivateRouteTable2"
                              },
                              "DestinationCidrBlock": "0.0.0.0/0",
                              "NatGatewayId": {
                                "Ref": "NatGateway2"
                              }
                            }
                          },
                          "PrivateSubnet2RouteTableAssociation": {
                            "Type": "AWS::EC2::SubnetRouteTableAssociation",
                            "Properties": {
                              "RouteTableId": {
                                "Ref": "PrivateRouteTable2"
                              },
                              "SubnetId": {
                                "Ref": "PrivateSubnet2"
                              }
                            }
                          },
                          "PrivateRouteTable3": {
                            "Type": "AWS::EC2::RouteTable",
                            "Properties": {
                              "VpcId": {
                                "Ref": "VPC"
                              },
                              "Tags": [{
                                "Key": "Name",
                                "Value": {
                                  "Fn::Sub": "${EnvironmentName} Private Routes (AZ3)"
                                }
                                }]
                              }
                            },
                            "DefaultPrivateRoute3": {
                              "Type": "AWS::EC2::Route",
                              "Properties": {
                                "RouteTableId": {
                                  "Ref": "PrivateRouteTable3"
                                },
                                "DestinationCidrBlock": "0.0.0.0/0",
                                "NatGatewayId": {
                                  "Ref": "NatGateway3"
                                }
                              }
                            },
                            "PrivateSubnet3RouteTableAssociation": {
                              "Type": "AWS::EC2::SubnetRouteTableAssociation",
                              "Properties": {
                                "RouteTableId": {
                                  "Ref": "PrivateRouteTable3"
                                },
                                "SubnetId": {
                                  "Ref": "PrivateSubnet3"
                                }
                              }
                            }
                          },
                            "Outputs": {
                              "VPC": {
                                "Description": "A reference to the created VPC",
                                "Value": {
                                  "Ref": "VPC"
                                }
                              },
                              "PublicSubnets": {
                                "Description": "A list of the public subnets",
                                "Value": {
                                  "Fn::Join": [
                                    ",",
                                    [{
                                      "Ref": "PublicSubnet1"
                                    },
                                    {
                                      "Ref": "PublicSubnet2"
                                    },
                                    {
                                      "Ref": "PublicSubnet3"
                                    }
                                  ]
                                ]
                              }
                            },
                            "PrivateSubnets": {
                              "Description": "A list of the private subnets",
                              "Value": {
                                "Fn::Join": [
                                  ",",
                                  [{
                                    "Ref": "PrivateSubnet1"
                                  },
                                  {
                                    "Ref": "PrivateSubnet2"
                                  },
                                  {
                                    "Ref": "PrivateSubnet3"
                                  }
                                ]
                              ]
                            }
                          },
                          "PublicSubnet1": {
                            "Description": "A reference to the public subnet in the 1st Availability Zone",
                            "Value": {
                              "Ref": "PublicSubnet1"
                            }
                          },
                          "PublicSubnet2": {
                            "Description": "A reference to the public subnet in the 2nd Availability Zone",
                            "Value": {
                              "Ref": "PublicSubnet2"
                            }
                          },
                          "PublicSubnet3": {
                            "Description": "A reference to the public subnet in the 3rd Availability Zone",
                            "Value": {
                              "Ref": "PublicSubnet3"
                            }
                          },
                          "PrivateSubnet1": {
                            "Description": "A reference to the private subnet in the 1st Availability Zone",
                            "Value": {
                              "Ref": "PrivateSubnet1"
                            }
                          },
                          "PrivateSubnet2": {
                            "Description": "A reference to the private subnet in the 2nd Availability Zone",
                            "Value": {
                              "Ref": "PrivateSubnet2"
                            }
                          },
                          "PrivateSubnet3": {
                            "Description": "A reference to the private subnet in the 3rd Availability Zone",
                            "Value": {
                              "Ref": "PrivateSubnet3"
                            }
                          }
                        }
                      }
